# auto-apply

./: .gitignore  CLAUDE.md  MIGRATION_LOG.md  README.md  cli.py  main.py  main_csv.py  pyproject.toml  run.py  run_tests.py  run_web.py  test_slice_error.py  test_web_interface.py
core/: __init__.py  claude.py  claude_sdk.py  processor.py  prompts.py  scraper.py  utils.py
docs/: API.md  CLAUDE_SETUP.md  CRAWL4AI_REFERENCE.md
examples/: sample_complete_result.json  sample_urls.txt
tests/: test_api.py  test_claude.py  test_cli.py  test_scraper.py
tests/fixtures/: sample_responses.json
tests/fixtures/mock_html/: simple_form.html
web/: README.md  __init__.py  app.py
web/static/: app.js  style.css
web/templates/: index.html
