[project]
name = "auto-apply"
version = "0.1.0"
description = "Automated application form processor using web scraping and Claude MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "crawl4ai>=0.4.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "claude-code-sdk>=0.0.10",
    "anyio>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pytest-benchmark>=4.0.0",
    "locust>=2.17.0",
    "memory-profiler>=0.61.0",
    "psutil>=5.9.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]